ENEX FSL/snapshotDownload (1)/objects/FSL__Service_Goal__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Custom_Logic_Data__c</fullName>
        <label>Custom Logic Data</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Custom_Type__c</fullName>
        <label>Custom Objective Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Objective_Minimize_Engineer_Idle_Time</fullName>
                    <label>Minimize Engineer Idle Time</label>
                </value>
                <value>
                    <fullName>Objective_Minimize_Use_Of_Elasticity</fullName>
                    <label>Minimize Use Of Elasticity</label>
                </value>
                <value>
                    <fullName>Objectiveֿ_Priority_By_Distance_To_Engineer</fullName>
                    <label>Priority By Distance To Engineer</label>
                </value>
                <value>
                    <fullName>Objective_Travel_From_Home_Base</fullName>
                    <label>Travel From Home Base</label>
                </value>
                <value>
                    <fullName>Objective_Skill_Level</fullName>
                    <label>Skill Level</label>
                </value>
                <value>
                    <fullName>Objective_Asap</fullName>
                    <label>ASAP</label>
                </value>
                <value>
                    <fullName>Objective_Minimize_Travel</fullName>
                    <label>Minimize Travel</label>
                </value>
                <value>
                    <fullName>Objective_Minimize_Overtime</fullName>
                    <label>Minimize Overtime</label>
                </value>
                <value>
                    <fullName>Objective_Resource_Priority</fullName>
                    <label>Resource Priority</label>
                </value>
                <value>
                    <fullName>Objective_PreferredEngineer</fullName>
                    <label>Preferred Resource</label>
                </value>
                <value>
                    <fullName>Objective_Task_Priority</fullName>
                    <label>Task Priority</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Ignore_Home_Base_Coordinates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Establece la programación para que incluya o excluya desde las condiciones de desplazamiento minimizadas con el primer y el último desplazamiento del días, hasta la base central del recurso de servicio y desde ella</inlineHelpText>
        <label>Exclude Home Base Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Object_Group_Field__c</fullName>
        <label>Object_Group_Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Prioritize_Resource__c</fullName>
        <label>Prioritize Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Least Qualified</fullName>
                    <default>true</default>
                    <label>Least Qualified</label>
                </value>
                <value>
                    <fullName>Most Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Resource_Group_Field__c</fullName>
        <label>Resource_Group_Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Priority_Field__c</fullName>
        <defaultValue>&quot;fsl__priority__c&quot;</defaultValue>
        <label>Resource Priority Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Objective</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Objectives</pluralLabel>
    <recordTypes>
        <fullName>FSL__Objective_Asap</fullName>
        <active>true</active>
        <description>Schedule as soon as possible</description>
        <label>ASAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Custom_Logic</fullName>
        <active>true</active>
        <description>Custom Objective</description>
        <label>Custom Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Minimize_Overtime</fullName>
        <active>true</active>
        <description>Minimize the use of overtime</description>
        <label>Minimize Overtime</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Minimize_Travel</fullName>
        <active>true</active>
        <description>Minimize travel time</description>
        <label>Minimize Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_PreferredEngineer</fullName>
        <active>true</active>
        <description>Prioritize scheduling according to preferred resource</description>
        <label>Preferred Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Resource_Priority</fullName>
        <active>true</active>
        <description>Prefer a resource based on a field value on the resource</description>
        <label>Resource Priority</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Objective_Skill_Level</fullName>
        <active>true</active>
        <description>Prefer the least/most qualified candidate</description>
        <label>Skill Level</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Resource_Priority_Not_Null</fullName>
        <active>true</active>
        <description>Resource priority objective&apos;s resource property Field cannot be null</description>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;Objective_Resource_Priority&apos;  &amp;&amp;  FSL__Resource_Priority_Field__c = NULL</errorConditionFormula>
        <errorDisplayField>FSL__Resource_Priority_Field__c</errorDisplayField>
        <errorMessage>Resource Priority Field should not be empty</errorMessage>
    </validationRules>
</CustomObject>